<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

<!--    <fragment-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:name="com.example.appevents.ui.home.HomeFragment"-->
<!--        android:label="@string/title_home"-->
<!--        tools:layout="@layout/fragment_home" />-->

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.appevents.ui.upcoming.UpcomingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.appevents.ui.finished.FinishedFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.appevents.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.appevents.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.appevents.ui.settings.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>