<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="top">

    <!-- Title for Settings -->
<!--    <TextView-->
<!--        android:id="@+id/tv_settings_title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/settings_title"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginBottom="32dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_dark_mode"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:contentDescription="@string/enable_dark_mode"
            android:importantForAccessibility="no"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_reminder"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_notification"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_daily_reminder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:contentDescription="@string/enable_notification"
            android:importantForAccessibility="no"/>
    </LinearLayout>

</LinearLayout>
