<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name" />

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_favorite_border_24"
                    android:contentDescription="@string/title_favorite"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:background="@drawable/favorite_button_background"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="8dp"
                    app:tint="@android:color/white" />
            </FrameLayout>

            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="16dp"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/eventOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/eventQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:text="@string/sisa_kouta" />

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/openLinkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_register"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="32dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
